Fix viewport problem on smaller screen

--- a/sass/base/_layout.scss
+++ b/sass/base/_layout.scss
@@ -12,7 +12,7 @@ body {
   overflow: hidden;
   margin: 0 auto;
   padding: 0 1.5em;
-  min-width: 18.5em;
+  min-width: 13.5em;
   max-width: 37.5em; /*600px/16px*/
   article {
     overflow: hidden;
